syntax = 'proto3';
package simulator;

import "google/protobuf/empty.proto";
import "phase_1/infra.proto";

option java_multiple_files = true;
option java_package = "com.exactpro.th2.simulator";

message RuleID {
    int32 id = 1;
}

message RuleInfo {

    enum RuleStatus {
        NONE = 0;
        //EXIST = 1;
        //EXECUTE = 2;
        ENABLE = 1;
    }

    RuleID id = 1;
    //string type = 2;
    //map<string, string> arguments = 3;
    RuleStatus status = 4;
}

//message CreateRuleEvent {
//    string type = 1;
//    map<string, string> arguments = 2;
//    bool autoEnable = 3;
//}

//message RuleTypes {
//    repeated string types = 1;
//}

message RulesInfo {
    repeated RuleInfo info = 1;
}

message CreateFixRule {
    map<string, phase_1.Value> messageFields = 1;
}

service ServiceSimulator {
    //rpc createRule(CreateRuleEvent) returns (RuleInfo) {}
    //rpc enableRule(RuleID) returns (RuleInfo) {}
    //rpc disableRule(RuleID) returns (RuleInfo) {}

    //rpc getRuleTypes(google.protobuf.Empty) returns (RuleTypes) {}

    rpc createRule_FIX(CreateFixRule) returns (RuleInfo) {}
    rpc removeRule(RuleID) returns (RuleInfo) {}
    rpc getRulesInfo(google.protobuf.Empty) returns (RulesInfo) {}
}